--- a/style.css
+++ b/style.css
@@ -4,6 +4,8 @@
   box-sizing: border-box;
 }
 
+
+
 html,
 body,
 .wrapper {
@@ -14,7 +16,7 @@ body,
 
 body {
   font-family: sans-serif;
-  background-color: #f9fbfd;
+  background-color: #4d89c5;
 }
 
 .wrapper {
@@ -24,10 +26,13 @@ body {
 }
 
 header {
+  font-style: italic;
+  font-size: 30px;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   text-align: center;
   padding: 20px;
   padding-top: 0px;
-  color: hsl(206, 17%, 28%);
+  color: hsl(300, 33%, 99%);
 }
 
 .card {
@@ -35,7 +40,7 @@ header {
   border-radius: 5px;
   border-width: 1px;
   box-shadow: rgba(0, 0, 0, 0.15) 0px 2px 8px 0px;
-  color: hsl(206, 17%, 28%);
+  color: hsl(300, 58%, 46%);
   font-size: 18px;
   margin: 0 auto;
   max-width: 800px;
@@ -46,12 +51,13 @@ header {
   content: " ";
   display: block;
   width: 100%;
-  background: #e7e9eb;
+  background: #9958b8;
   height: 2px;
 }
 
 .card-body {
   min-height: 100px;
+  background-color: darkgrey;
 }
 
 .card-footer {
@@ -62,7 +68,7 @@ header {
   content: " ";
   display: block;
   width: 100%;
-  background: #e7e9eb;
+  background: #9958b8;
   height: 2px;
 }
 
@@ -74,7 +80,7 @@ header {
 
 .btn {
   border: none;
-  background-color: hsl(360, 91%, 36%);
+  background-color: rgb(62, 185, 128);
   border-radius: 25px;
   box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 6px 0px rgba(0, 0, 0, 0.2) 0px 1px 1px
     0px;
@@ -102,7 +108,6 @@ button[disabled] {
   -moz-appearance: none;
   appearance: none;
   border: none;
-  display: block;
   width: 100%;
   padding-top: 15px;
   padding-left: 15px;
@@ -112,7 +117,6 @@ button[disabled] {
   text-align: center;
   margin-top: 10px;
   margin-bottom: 10px;
-  border: 2px dashed #c0c7cf;
   border-radius: 6px;
   resize: none;
   overflow: hidden;
